data/derived/sp14/progs/unify/prog3352.ml.out
Characters 67-80:
  (n mod 10) :: [digitsOfInt n];;
                 ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
